# plonky-cat

./: Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md  SOUNDNESS.md  publish.sh
.github/workflows/: ci.yml  docs.yml
crates/plonky-cat-basefold/: Cargo.toml
crates/plonky-cat-basefold/src/: error.rs  lib.rs
crates/plonky-cat-basefold/tests/: lens_laws.rs
crates/plonky-cat-code/: Cargo.toml
crates/plonky-cat-code/src/: error.rs  lib.rs
crates/plonky-cat-fft/: Cargo.toml
crates/plonky-cat-fft/src/: circle.rs  error.rs  lib.rs
crates/plonky-cat-field/: Cargo.toml
crates/plonky-cat-field/src/: babybear.rs  binary_tower.rs  error.rs  goldilocks.rs  koalabear.rs  lib.rs  mersenne31.rs
crates/plonky-cat-field/tests/: field_axioms.rs  field_inverse.rs
crates/plonky-cat-fri/: Cargo.toml
crates/plonky-cat-fri/src/: error.rs  lib.rs  whir.rs
crates/plonky-cat-hash/: Cargo.toml
crates/plonky-cat-hash/src/: griffin.rs  lib.rs  poseidon2.rs  tip5.rs
crates/plonky-cat-merkle/: Cargo.toml
crates/plonky-cat-merkle/src/: error.rs  lib.rs
crates/plonky-cat-plonk/: Cargo.toml
crates/plonky-cat-plonk/src/: air.rs  ccs.rs  error.rs  lib.rs
crates/plonky-cat-poly/: Cargo.toml
crates/plonky-cat-poly/src/: error.rs  lib.rs  multilinear.rs  univariate.rs
crates/plonky-cat-prover/: Cargo.toml
crates/plonky-cat-prover/src/: error.rs  lib.rs
crates/plonky-cat-reduce/: Cargo.toml
crates/plonky-cat-reduce/src/: error.rs  lib.rs  recursion.rs
crates/plonky-cat-sumcheck/: Cargo.toml
crates/plonky-cat-sumcheck/src/: binius.rs  error.rs  gkr.rs  lib.rs  logup.rs
crates/plonky-cat-tensor-pcs/: Cargo.toml
crates/plonky-cat-tensor-pcs/src/: error.rs  lib.rs
crates/plonky-cat-transcript/: Cargo.toml
crates/plonky-cat-transcript/src/: lib.rs
crates/plonky-cat-verifier/: Cargo.toml
crates/plonky-cat-verifier/src/: error.rs  lib.rs
examples/: basefold-test.rs  fib-plonk-basefold.rs  fib-poseidon2.rs  fri-rate-half.rs  mulgate-sumcheck.rs  sumcheck-test.rs
