[package]
name = "plonky-cat-code"
description = "Error-correcting codes: Reed-Solomon, tensor-RS, Reed-Muller"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
comp-cat-rs = { workspace = true }
plonky-cat-field = { workspace = true }
plonky-cat-fft = { workspace = true }

[lints]
workspace = true
