[package]
name = "plonky-cat-fft"
description = "FFT/NTT including four-step Bailey algorithm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
comp-cat-rs = { workspace = true }
plonky-cat-field = { workspace = true }

[lints]
workspace = true
