[package]
name = "plonky-cat-hash"
description = "Arithmetization-friendly and generic hash functions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
comp-cat-rs = { workspace = true }
plonky-cat-field = { workspace = true }

[lints]
workspace = true
