[package]
name = "plonky-cat-plonk"
description = "PLONK arithmetization with custom gates"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
comp-cat-rs = { workspace = true }
plonky-cat-field = { workspace = true }
plonky-cat-poly = { workspace = true }

[lints]
workspace = true
