[package]
name = "plonky-cat-poly"
description = "Univariate and multilinear polynomial functors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
comp-cat-rs = { workspace = true }
plonky-cat-field = { workspace = true }

[lints]
workspace = true
