[package]
name = "plonky-cat-transcript"
description = "Fiat-Shamir transcript as a natural transformation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
comp-cat-rs = { workspace = true }
plonky-cat-field = { workspace = true }

[lints]
workspace = true
