[package]
name = "plonky-cat-verifier"
description = "Verifier driver: catamorphism over ReductionFunctor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
comp-cat-rs = { workspace = true }
plonky-cat-reduce = { workspace = true }
plonky-cat-transcript = { workspace = true }
plonky-cat-field = { workspace = true }

[lints]
workspace = true
